--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,6 +27,9 @@
     <title>React App</title>
   </head>
   <body>
+    <!-- added below link and scripts per mapbox error in console, said to include in body of html -->
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.css' rel='stylesheet' />
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
